[package]
name = "dayu"
version = "0.2.4"
authors = ["Matrix <113445886@qq.com>"]
description = "Alibaba's Dayu SMS SDK for Rust."
license = "MIT"
keywords = ["sms", "dayu"]
repository = "https://github.com/Matrix-Zhang/dayu_rs"
readme = "README.md"
edition = "2018"

[dependencies]
base64 = "0.10"
chrono = "0.4"
failure = "0.1"
openssl = "0.10"
reqwest = "0.9"
serde = { "version" = "1.0", features = ["derive"] }
serde_json = "1.0"
textnonce = "0.6"
url = "1.7"
urlencoding = "1.0"
