[package]
name = "dayu"
version = "0.4.0"
authors = ["Matrix <113445886@qq.com>"]
description = "Alibaba's Dayu SMS SDK for Rust."
license = "MIT"
keywords = ["sms", "dayu"]
repository = "https://github.com/Matrix-Zhang/dayu_rs"
readme = "README.md"
edition = "2021"

[dependencies]
base64 = "0.13"
chrono = "0.4"
futures-util = "0.3"
openssl = "0.10"
reqwest = { version = "0.11", features = ["json"] }
serde = { "version" = "1.0", features = ["derive"] }
serde_json = "1.0"
textnonce = "1.0"
thiserror = "1.0"
url = "2.3"
urlencoding = "2.1"

[dev-dependencies]
tokio = "1.21"